[gd_scene load_steps=5 format=3 uid="uid://dji6noqfedsmf"]

[ext_resource type="Texture2D" uid="uid://boyt2d2row2jo" path="res://assets/ui/Label.png" id="1_v0uvy"]
[ext_resource type="Script" path="res://action/ui/action_card.gd" id="2_dfm2f"]
[ext_resource type="Texture2D" uid="uid://cc4knyc2bod0e" path="res://assets/items/wood.png" id="3_nvpoj"]
[ext_resource type="Texture2D" uid="uid://ciyyc6353vlsd" path="res://assets/action/axe.png" id="4_akdu4"]

[node name="ActionCard" type="NinePatchRect"]
offset_left = 162.0
offset_top = 97.0
offset_right = 422.0
offset_bottom = 538.0
mouse_filter = 0
texture = ExtResource("1_v0uvy")
script = ExtResource("2_dfm2f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Headquarter"
horizontal_alignment = 1

[node name="Type" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BUILDING"
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CostContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CostIcon" type="TextureRect" parent="VBoxContainer/CostContainer"]
layout_mode = 2
texture = ExtResource("3_nvpoj")

[node name="Cost" type="Label" parent="VBoxContainer/CostContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="Node2D" type="Node2D" parent="VBoxContainer"]
position = Vector2(-1, 28)

[node name="Image" type="Sprite2D" parent="VBoxContainer/Node2D"]
unique_name_in_owner = true
position = Vector2(129, 86)
scale = Vector2(2.95313, 3.5)
texture = ExtResource("4_akdu4")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
